Working on fixing the drink section width when on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,8 +158,13 @@ body {
     margin-top: 210px;
 }
 
+#drink {
+    width: 100%;
+}
+
 .drink-section {
     margin: 25px 2px 0px 2px;
+    display: flex;
 }
 
 .drink-recipe {
@@ -220,4 +225,8 @@ body {
     line-height: 1.7rem;
     font-size: 18px;
     color: darkred;
+}
+
+@media screen {
+    
 }
